# An-lise-Spotify

./: .gitignore  1_entendimento_negocio.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FIX_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  PRESENTATION_IMPROVEMENTS.md  PROJECT_SUMMARY.en.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SCRIPTS_README.md  SECURITY.en.md  SECURITY.md  api.py  app.py  apresentacao.html  config.yaml  correlation_heatmap.py  create_branding_images.py  danceability_popularity_scatter.py  docker-compose.yml  embed_images_in_html.py  features_config.py  generate_analysis_graphs.py  import_libraries.py  main.py  popularity_histogram.py  preprocessor.py  pyproject.toml  requirements.txt  setup.py  setup.sh  train_ridge.py  train_test_split.py  verify_embedded_images.py
.github/workflows/: ci.yml
assets/: README.en.md  README.md  SCREENSHOTS_SUMMARY.md  generate_screenshots.py
assets/demo/: DEMO_GUIDE.md
data/: README.md
docs/: API.md  ARCHITECTURE.md  PRESENTATION.md  QUICKSTART.md  USAGE.md  references.bib  relatorio_tecnico.md
examples/: README.md  train_example.py
legacy_scripts/: categorical_pipeline.py  compare_mae.py  split_features_target.py  train_xgb.py  xgb_feature_importance.py  xgb_pipeline.py
models/: README.md
notebooks/: analise_completa_final.ipynb
src/: __init__.py
src/api/: app.py
src/dashboard/: app.py
src/data/: __init__.py  loader.py
src/models/: __init__.py  predictor.py
src/spotify_analysis/: __init__.py  cli.py  config.py
src/spotify_analysis/data/: __init__.py
src/spotify_analysis/models/: __init__.py
src/spotify_analysis/utils/: __init__.py
src/spotify_analysis/visualization/: __init__.py
src/utils/: __init__.py  config.py
src/visualization/: __init__.py  plots.py
tests/: conftest.py  test_data.py  test_data_loader.py  test_models.py  test_predictor.py
